<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_login"/>

    <item android:id="@+id/menu_update"
        android:title="@string/menu_update"
        android:icon="@drawable/ic_menu_refresh"        
        android:showAsAction="always" />
    
    <item android:id="@+id/menu_StartImageCaching"
        android:title="@string/menu_StartImageCaching"
        android:showAsAction="never" />
    
    <item
        android:id="@+id/menu_markAllAsRead"
        android:showAsAction="never"
        android:title="@string/menu_markAllAsRead"/>
    
    <item
        android:id="@+id/menu_downloadMoreItems"
        android:showAsAction="never"
        android:title="@string/menu_downloadMoreItems"/>
    
</menu>