<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- 
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
     -->
    
    <item
        android:id="@+id/action_starred"
        android:showAsAction="always"
        android:icon="@android:drawable/star_off"
        android:title="@string/action_starred"/>
    <!-- android:icon="@drawable/btn_rating_star_off_normal_holo_light" -->
    
    <item
        android:id="@+id/action_openInBrowser"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_set_as"
        android:title="@string/action_openInBrowser"/>
    
    <item
        android:id="@+id/action_sendSourceCode"
        android:showAsAction="never"        
        android:title="@string/action_sendSourceCode"/>

    <item
        android:id="@+id/action_ShareItem"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/action_Share" />

</menu>