<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"    	
	tools:context=".LoginActivity"
	android:id="@+id/login_form"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >
	
	<LinearLayout
	    android:orientation="vertical"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
    		    
	    <com.devspark.robototextview.widget.RobotoEditText
	        android:id="@+id/username"
	        android:inputType="textEmailAddress"
	        style="@style/LoginDialogEditTextStyle"
	        android:hint="@string/pref_title_username" />
	    
	    <com.devspark.robototextview.widget.RobotoEditText
	        android:id="@+id/password"
	        android:inputType="textPassword"
	        style="@style/LoginDialogEditTextStyle"
	        android:fontFamily="sans-serif"
	        android:hint="@string/pref_title_password" />
	
	    <com.devspark.robototextview.widget.RobotoEditText
	        android:id="@+id/edt_owncloudRootPath"
	        android:fontFamily="sans-serif"
	        android:hint="@string/pref_default_owncloudRootPath"
	        android:inputType="textUri"
	        android:maxLines="1"
	        android:selectAllOnFocus="true"
	        android:singleLine="true"
	        android:title="@string/pref_default_owncloudRootPath"
	        style="@style/LoginDialogEditTextStyle" />
	    
	    <com.devspark.robototextview.widget.RobotoCheckBox
	        android:id="@+id/cb_AllowAllSSLCertificates"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/pref_title_AllowAllSSLCertificates" />
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <com.devspark.robototextview.widget.RobotoButton
	            android:id="@+id/btn_cancel"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1.0"
	            android:text="@android:string/cancel" />
	
	        <com.devspark.robototextview.widget.RobotoButton
	            android:id="@+id/btn_signin"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1.0"
	            android:text="@string/action_sign_in_short" />
	    </LinearLayout>
	
	</LinearLayout>	
</ScrollView>